Sharpness-Aware Minimization

--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0007, -0.0012],\n",
-      "        [ 0.0008, -0.0013]])\n",
-      "tensor([0.0112, 0.0119])\n",
-      "tensor([[-0.0501, -0.0477],\n",
-      "        [ 0.0501,  0.0477]])\n",
-      "tensor([-0.0873,  0.0873])\n"
+      "tensor([[-0.0106, -0.0197],\n",
+      "        [-0.0503, -0.0939]])\n",
+      "tensor([-0.0105, -0.0500])\n",
+      "tensor([[-0.0456,  0.0535],\n",
+      "        [ 0.0456, -0.0535]])\n",
+      "tensor([-0.0711,  0.0711])\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
@@ -93,12 +93,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n"
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "tensor(nan, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -143,9 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[-0.1276, -0.5890],\n",
-      "        [ 0.1089,  0.0384]]), tensor([-0.1783, -0.1328]), tensor([[ 0.8781,  0.5249],\n",
-      "        [-1.3218, -0.2025]]), tensor([ 1.0254, -1.0958]))\n"
+      "(tensor([[ 0.2023, -0.0481],\n",
+      "        [ 0.6727, -0.4599]]), tensor([0.3982, 1.4024]), tensor([[-0.5114,  0.4607],\n",
+      "        [ 0.4840, -0.3643]]), tensor([ 1.4619, -2.1532]))\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1276, -0.5890],\n",
-      "        [ 0.1089,  0.0384]])\n",
-      "tensor([-0.1783, -0.1328])\n",
-      "tensor([[ 0.8781,  0.5249],\n",
-      "        [-1.3218, -0.2025]])\n",
-      "tensor([ 1.0254, -1.0958])\n"
+      "tensor([[ 0.2023, -0.0481],\n",
+      "        [ 0.6728, -0.4599]])\n",
+      "tensor([0.3982, 1.4024])\n",
+      "tensor([[-0.5114,  0.4607],\n",
+      "        [ 0.4840, -0.3643]])\n",
+      "tensor([ 1.4619, -2.1532])\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -209,12 +209,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n"
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -243,24 +243,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n",
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n",
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n"
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n",
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n",
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n"
      ]
     }
    ],
@@ -280,40 +280,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.0014, -0.0025],\n",
-       "         [ 0.0015, -0.0026]]),\n",
-       " tensor([0.0224, 0.0238]),\n",
-       " tensor([[-0.1002, -0.0954],\n",
-       "         [ 0.1002,  0.0954]]),\n",
-       " tensor([-0.1747,  0.1747]),\n",
-       " tensor([[ 0.0014, -0.0025],\n",
-       "         [ 0.0015, -0.0026]]),\n",
-       " tensor([0.0224, 0.0238]),\n",
-       " tensor([[-0.1002, -0.0954],\n",
-       "         [ 0.1002,  0.0954]]),\n",
-       " tensor([-0.1747,  0.1747]),\n",
-       " tensor([[ 0.0014, -0.0025],\n",
-       "         [ 0.0015, -0.0026]]),\n",
-       " tensor([0.0224, 0.0238]),\n",
-       " tensor([[-0.1002, -0.0954],\n",
-       "         [ 0.1002,  0.0954]]),\n",
-       " tensor([-0.1747,  0.1747]),\n",
-       " tensor([[-0.0645, -0.2933],\n",
-       "         [ 0.0537,  0.0205]]),\n",
-       " tensor([-0.1004, -0.0783]),\n",
-       " tensor([[ 0.4891,  0.3101],\n",
-       "         [-0.7110, -0.1489]]),\n",
-       " tensor([ 0.6000, -0.6353]))"
+       "(tensor([[-0.0211, -0.0394],\n",
+       "         [-0.1007, -0.1877]]),\n",
+       " tensor([-0.0210, -0.1000]),\n",
+       " tensor([[-0.0912,  0.1069],\n",
+       "         [ 0.0912, -0.1069]]),\n",
+       " tensor([-0.1422,  0.1422]),\n",
+       " tensor([[-0.0211, -0.0394],\n",
+       "         [-0.1007, -0.1877]]),\n",
+       " tensor([-0.0210, -0.1000]),\n",
+       " tensor([[-0.0912,  0.1069],\n",
+       "         [ 0.0912, -0.1069]]),\n",
+       " tensor([-0.1422,  0.1422]),\n",
+       " tensor([[-0.0211, -0.0394],\n",
+       "         [-0.1007, -0.1877]]),\n",
+       " tensor([-0.0210, -0.1000]),\n",
+       " tensor([[-0.0912,  0.1069],\n",
+       "         [ 0.0912, -0.1069]]),\n",
+       " tensor([-0.1422,  0.1422]),\n",
+       " tensor([[ 0.1117, -0.0044],\n",
+       "         [ 0.3867, -0.1361]]),\n",
+       " tensor([0.2096, 0.7512]),\n",
+       " tensor([[-0.2101,  0.1769],\n",
+       "         [ 0.1964, -0.1287]]),\n",
+       " tensor([ 0.8020, -1.1477]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -341,12 +341,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0043, -0.0074],\n",
-      "        [ 0.0045, -0.0078]])\n",
-      "tensor([0.0673, 0.0714])\n",
-      "tensor([[-0.3005, -0.2861],\n",
-      "        [ 0.3005,  0.2861]])\n",
-      "tensor([-0.5240,  0.5240])\n"
+      "tensor([[-0.0634, -0.1181],\n",
+      "        [-0.3020, -0.5632]])\n",
+      "tensor([-0.0629, -0.2999])\n",
+      "tensor([[-0.2736,  0.3208],\n",
+      "        [ 0.2736, -0.3208]])\n",
+      "tensor([-0.4267,  0.4267])\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -375,12 +375,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0043, -0.0074],\n",
-      "        [ 0.0045, -0.0078]])\n",
-      "tensor([0.0673, 0.0714])\n",
-      "tensor([[-0.3005, -0.2861],\n",
-      "        [ 0.3005,  0.2861]])\n",
-      "tensor([-0.5240,  0.5240])\n"
+      "tensor([[-0.0634, -0.1181],\n",
+      "        [-0.3020, -0.5632]])\n",
+      "tensor([-0.0629, -0.2999])\n",
+      "tensor([[-0.2736,  0.3208],\n",
+      "        [ 0.2736, -0.3208]])\n",
+      "tensor([-0.4267,  0.4267])\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -410,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0014, -0.0025],\n",
-      "        [ 0.0015, -0.0026]])\n",
-      "tensor([0.0224, 0.0238])\n",
-      "tensor([[-0.1002, -0.0954],\n",
-      "        [ 0.1002,  0.0954]])\n",
-      "tensor([-0.1747,  0.1747])\n"
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n"
      ]
     }
    ],
@@ -430,32 +430,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a3effb1",
+   "metadata": {},
+   "source": [
+    "# 5. 각 parameter 별로 3을 더해준다"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bea29473",
+   "execution_count": 66,
+   "id": "748e11fe",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "One of the differentiated Tensors appears to not have been used in the graph. Set allow_unused=True if this is the desired behavior.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13576\\3482318061.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mce_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequires_grad\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mce_gradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mce_gradient\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\metal\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mgrad\u001b[1;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused)\u001b[0m\n\u001b[0;32m    226\u001b[0m     return Variable._execution_engine.run_backward(\n\u001b[0;32m    227\u001b[0m         \u001b[0moutputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_outputs_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         inputs, allow_unused, accumulate_grad=False)\n\u001b[0m\u001b[0;32m    229\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: One of the differentiated Tensors appears to not have been used in the graph. Set allow_unused=True if this is the desired behavior."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Entropy Loss Gradient:\n",
+      "tensor([[-0.0211, -0.0394],\n",
+      "        [-0.1007, -0.1877]])\n",
+      "tensor([-0.0210, -0.1000])\n",
+      "tensor([[-0.0912,  0.1069],\n",
+      "        [ 0.0912, -0.1069]])\n",
+      "tensor([-0.1422,  0.1422])\n"
      ]
     }
    ],
    "source": [
-    "ce_loss = torch.tensor(0.1, requires_grad=True)\n",
+    "# Gradient 확인\n",
+    "print(\"Cross Entropy Loss Gradient:\")\n",
     "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
-    "\n",
-    "print(ce_gradient)\n",
-    "\n",
     "for grad_param in ce_gradient:\n",
     "    print(grad_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "17e6215f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Entropy Loss Gradient:\n",
+      "tensor([[2.9789, 2.9606],\n",
+      "        [2.8993, 2.8123]])\n",
+      "tensor([2.9790, 2.9000])\n",
+      "tensor([[2.9088, 3.1069],\n",
+      "        [3.0912, 2.8931]])\n",
+      "tensor([2.8578, 3.1422])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gradient 확인\n",
+    "print(\"Cross Entropy Loss Gradient:\")\n",
+    "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
+    "for grad_param in ce_gradient:\n",
+    "    print(torch.tensor(3) + grad_param)"
    ]
   }
  ],
