--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0106, -0.0197],\n",
-      "        [-0.0503, -0.0939]])\n",
-      "tensor([-0.0105, -0.0500])\n",
-      "tensor([[-0.0456,  0.0535],\n",
-      "        [ 0.0456, -0.0535]])\n",
-      "tensor([-0.0711,  0.0711])\n"
+      "tensor([[-0.0194, -0.0071],\n",
+      "        [ 0.0630,  0.0230]])\n",
+      "tensor([ 0.0131, -0.0423])\n",
+      "tensor([[ 0.1405,  0.1238],\n",
+      "        [-0.1405, -0.1238]])\n",
+      "tensor([-0.0982,  0.0982])\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
@@ -93,12 +93,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n"
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n"
      ]
     }
    ],
@@ -114,17 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(nan, grad_fn=<DivBackward0>)"
+       "tensor(-0.4425, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -143,9 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[ 0.2023, -0.0481],\n",
-      "        [ 0.6727, -0.4599]]), tensor([0.3982, 1.4024]), tensor([[-0.5114,  0.4607],\n",
-      "        [ 0.4840, -0.3643]]), tensor([ 1.4619, -2.1532]))\n"
+      "(tensor([[-0.0092,  0.0191],\n",
+      "        [ 0.1909,  0.0929]]), tensor([0.2050, 0.1601]), tensor([[ 0.3992,  0.3432],\n",
+      "        [-0.1453, -0.1484]]), tensor([-0.5637, -0.3832]))\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2023, -0.0481],\n",
-      "        [ 0.6728, -0.4599]])\n",
-      "tensor([0.3982, 1.4024])\n",
-      "tensor([[-0.5114,  0.4607],\n",
-      "        [ 0.4840, -0.3643]])\n",
-      "tensor([ 1.4619, -2.1532])\n"
+      "tensor([[-0.0092,  0.0191],\n",
+      "        [ 0.1909,  0.0929]])\n",
+      "tensor([0.2050, 0.1601])\n",
+      "tensor([[ 0.3992,  0.3432],\n",
+      "        [-0.1453, -0.1484]])\n",
+      "tensor([-0.5637, -0.3832])\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -209,12 +209,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n"
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -243,24 +243,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n",
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n",
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n"
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n",
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n",
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n"
      ]
     }
    ],
@@ -280,40 +280,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.0211, -0.0394],\n",
-       "         [-0.1007, -0.1877]]),\n",
-       " tensor([-0.0210, -0.1000]),\n",
-       " tensor([[-0.0912,  0.1069],\n",
-       "         [ 0.0912, -0.1069]]),\n",
-       " tensor([-0.1422,  0.1422]),\n",
-       " tensor([[-0.0211, -0.0394],\n",
-       "         [-0.1007, -0.1877]]),\n",
-       " tensor([-0.0210, -0.1000]),\n",
-       " tensor([[-0.0912,  0.1069],\n",
-       "         [ 0.0912, -0.1069]]),\n",
-       " tensor([-0.1422,  0.1422]),\n",
-       " tensor([[-0.0211, -0.0394],\n",
-       "         [-0.1007, -0.1877]]),\n",
-       " tensor([-0.0210, -0.1000]),\n",
-       " tensor([[-0.0912,  0.1069],\n",
-       "         [ 0.0912, -0.1069]]),\n",
-       " tensor([-0.1422,  0.1422]),\n",
-       " tensor([[ 0.1117, -0.0044],\n",
-       "         [ 0.3867, -0.1361]]),\n",
-       " tensor([0.2096, 0.7512]),\n",
-       " tensor([[-0.2101,  0.1769],\n",
-       "         [ 0.1964, -0.1287]]),\n",
-       " tensor([ 0.8020, -1.1477]))"
+       "(tensor([[-0.0389, -0.0142],\n",
+       "         [ 0.1260,  0.0459]]),\n",
+       " tensor([ 0.0261, -0.0846]),\n",
+       " tensor([[ 0.2811,  0.2475],\n",
+       "         [-0.2811, -0.2475]]),\n",
+       " tensor([-0.1965,  0.1965]),\n",
+       " tensor([[-0.0389, -0.0142],\n",
+       "         [ 0.1260,  0.0459]]),\n",
+       " tensor([ 0.0261, -0.0846]),\n",
+       " tensor([[ 0.2811,  0.2475],\n",
+       "         [-0.2811, -0.2475]]),\n",
+       " tensor([-0.1965,  0.1965]),\n",
+       " tensor([[-0.0389, -0.0142],\n",
+       "         [ 0.1260,  0.0459]]),\n",
+       " tensor([ 0.0261, -0.0846]),\n",
+       " tensor([[ 0.2811,  0.2475],\n",
+       "         [-0.2811, -0.2475]]),\n",
+       " tensor([-0.1965,  0.1965]),\n",
+       " tensor([[0.0149, 0.0166],\n",
+       "         [0.0324, 0.0235]]),\n",
+       " tensor([0.0895, 0.1224]),\n",
+       " tensor([[0.0590, 0.0478],\n",
+       "         [0.0679, 0.0496]]),\n",
+       " tensor([-0.1836, -0.2898]))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -341,12 +341,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0634, -0.1181],\n",
-      "        [-0.3020, -0.5632]])\n",
-      "tensor([-0.0629, -0.2999])\n",
-      "tensor([[-0.2736,  0.3208],\n",
-      "        [ 0.2736, -0.3208]])\n",
-      "tensor([-0.4267,  0.4267])\n"
+      "tensor([[-0.1167, -0.0425],\n",
+      "        [ 0.3781,  0.1377]])\n",
+      "tensor([ 0.0783, -0.2539])\n",
+      "tensor([[ 0.8433,  0.7426],\n",
+      "        [-0.8433, -0.7426]])\n",
+      "tensor([-0.5894,  0.5894])\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -375,12 +375,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0634, -0.1181],\n",
-      "        [-0.3020, -0.5632]])\n",
-      "tensor([-0.0629, -0.2999])\n",
-      "tensor([[-0.2736,  0.3208],\n",
-      "        [ 0.2736, -0.3208]])\n",
-      "tensor([-0.4267,  0.4267])\n"
+      "tensor([[-0.1167, -0.0425],\n",
+      "        [ 0.3781,  0.1377]])\n",
+      "tensor([ 0.0783, -0.2539])\n",
+      "tensor([[ 0.8433,  0.7426],\n",
+      "        [-0.8433, -0.7426]])\n",
+      "tensor([-0.5894,  0.5894])\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -410,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n"
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "id": "748e11fe",
    "metadata": {},
    "outputs": [
@@ -448,12 +448,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0211, -0.0394],\n",
-      "        [-0.1007, -0.1877]])\n",
-      "tensor([-0.0210, -0.1000])\n",
-      "tensor([[-0.0912,  0.1069],\n",
-      "        [ 0.0912, -0.1069]])\n",
-      "tensor([-0.1422,  0.1422])\n"
+      "tensor([[-0.0389, -0.0142],\n",
+      "        [ 0.1260,  0.0459]])\n",
+      "tensor([ 0.0261, -0.0846])\n",
+      "tensor([[ 0.2811,  0.2475],\n",
+      "        [-0.2811, -0.2475]])\n",
+      "tensor([-0.1965,  0.1965])\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "id": "17e6215f",
    "metadata": {},
    "outputs": [
@@ -476,12 +476,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[2.9789, 2.9606],\n",
-      "        [2.8993, 2.8123]])\n",
-      "tensor([2.9790, 2.9000])\n",
-      "tensor([[2.9088, 3.1069],\n",
-      "        [3.0912, 2.8931]])\n",
-      "tensor([2.8578, 3.1422])\n"
+      "tensor([[2.9611, 2.9858],\n",
+      "        [3.1260, 3.0459]])\n",
+      "tensor([3.0261, 2.9154])\n",
+      "tensor([[3.2811, 3.2475],\n",
+      "        [2.7189, 2.7525]])\n",
+      "tensor([2.8035, 3.1965])\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
