--- a/Test_jupyternotebook/check_gradient.ipynb
+++ b/Test_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0194, -0.0071],\n",
-      "        [ 0.0630,  0.0230]])\n",
-      "tensor([ 0.0131, -0.0423])\n",
-      "tensor([[ 0.1405,  0.1238],\n",
-      "        [-0.1405, -0.1238]])\n",
-      "tensor([-0.0982,  0.0982])\n"
+      "tensor([[-0.0053, -0.0007],\n",
+      "        [ 0.0170,  0.0024]])\n",
+      "tensor([ 0.0045, -0.0146])\n",
+      "tensor([[-0.0140, -0.0017],\n",
+      "        [ 0.0140,  0.0017]])\n",
+      "tensor([-0.0492,  0.0492])\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
@@ -93,12 +93,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n"
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n"
      ]
     }
    ],
@@ -114,17 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(-0.4425, grad_fn=<DivBackward0>)"
+       "tensor(nan, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -143,9 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[-0.0092,  0.0191],\n",
-      "        [ 0.1909,  0.0929]]), tensor([0.2050, 0.1601]), tensor([[ 0.3992,  0.3432],\n",
-      "        [-0.1453, -0.1484]]), tensor([-0.5637, -0.3832]))\n"
+      "(tensor([[-0.5237, -0.3311],\n",
+      "        [ 0.3590,  0.2290]]), tensor([ 0.8400, -0.5175]), tensor([[-0.0887,  0.0450],\n",
+      "        [ 0.1690,  0.2797]]), tensor([0.4007, 1.1696]))\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0092,  0.0191],\n",
-      "        [ 0.1909,  0.0929]])\n",
-      "tensor([0.2050, 0.1601])\n",
-      "tensor([[ 0.3992,  0.3432],\n",
-      "        [-0.1453, -0.1484]])\n",
-      "tensor([-0.5637, -0.3832])\n"
+      "tensor([[-0.5237, -0.3311],\n",
+      "        [ 0.3590,  0.2290]])\n",
+      "tensor([ 0.8400, -0.5175])\n",
+      "tensor([[-0.0887,  0.0450],\n",
+      "        [ 0.1690,  0.2797]])\n",
+      "tensor([0.4007, 1.1696])\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -209,12 +209,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n"
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -243,24 +243,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n",
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n",
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n"
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n",
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n",
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n"
      ]
     }
    ],
@@ -280,40 +280,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.0389, -0.0142],\n",
-       "         [ 0.1260,  0.0459]]),\n",
-       " tensor([ 0.0261, -0.0846]),\n",
-       " tensor([[ 0.2811,  0.2475],\n",
-       "         [-0.2811, -0.2475]]),\n",
-       " tensor([-0.1965,  0.1965]),\n",
-       " tensor([[-0.0389, -0.0142],\n",
-       "         [ 0.1260,  0.0459]]),\n",
-       " tensor([ 0.0261, -0.0846]),\n",
-       " tensor([[ 0.2811,  0.2475],\n",
-       "         [-0.2811, -0.2475]]),\n",
-       " tensor([-0.1965,  0.1965]),\n",
-       " tensor([[-0.0389, -0.0142],\n",
-       "         [ 0.1260,  0.0459]]),\n",
-       " tensor([ 0.0261, -0.0846]),\n",
-       " tensor([[ 0.2811,  0.2475],\n",
-       "         [-0.2811, -0.2475]]),\n",
-       " tensor([-0.1965,  0.1965]),\n",
-       " tensor([[0.0149, 0.0166],\n",
-       "         [0.0324, 0.0235]]),\n",
-       " tensor([0.0895, 0.1224]),\n",
-       " tensor([[0.0590, 0.0478],\n",
-       "         [0.0679, 0.0496]]),\n",
-       " tensor([-0.1836, -0.2898]))"
+       "(tensor([[-0.0105, -0.0015],\n",
+       "         [ 0.0341,  0.0047]]),\n",
+       " tensor([ 0.0090, -0.0293]),\n",
+       " tensor([[-0.0281, -0.0034],\n",
+       "         [ 0.0281,  0.0034]]),\n",
+       " tensor([-0.0985,  0.0985]),\n",
+       " tensor([[-0.0105, -0.0015],\n",
+       "         [ 0.0341,  0.0047]]),\n",
+       " tensor([ 0.0090, -0.0293]),\n",
+       " tensor([[-0.0281, -0.0034],\n",
+       "         [ 0.0281,  0.0034]]),\n",
+       " tensor([-0.0985,  0.0985]),\n",
+       " tensor([[-0.0105, -0.0015],\n",
+       "         [ 0.0341,  0.0047]]),\n",
+       " tensor([ 0.0090, -0.0293]),\n",
+       " tensor([[-0.0281, -0.0034],\n",
+       "         [ 0.0281,  0.0034]]),\n",
+       " tensor([-0.0985,  0.0985]),\n",
+       " tensor([[-0.2566, -0.1648],\n",
+       "         [ 0.1624,  0.1121]]),\n",
+       " tensor([ 0.4155, -0.2441]),\n",
+       " tensor([[-0.0303,  0.0242],\n",
+       "         [ 0.0705,  0.1382]]),\n",
+       " tensor([0.2496, 0.5356]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -341,12 +341,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1167, -0.0425],\n",
-      "        [ 0.3781,  0.1377]])\n",
-      "tensor([ 0.0783, -0.2539])\n",
-      "tensor([[ 0.8433,  0.7426],\n",
-      "        [-0.8433, -0.7426]])\n",
-      "tensor([-0.5894,  0.5894])\n"
+      "tensor([[-0.0316, -0.0044],\n",
+      "        [ 0.1022,  0.0141]])\n",
+      "tensor([ 0.0271, -0.0878])\n",
+      "tensor([[-0.0842, -0.0102],\n",
+      "        [ 0.0842,  0.0102]])\n",
+      "tensor([-0.2954,  0.2954])\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -375,12 +375,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.1167, -0.0425],\n",
-      "        [ 0.3781,  0.1377]])\n",
-      "tensor([ 0.0783, -0.2539])\n",
-      "tensor([[ 0.8433,  0.7426],\n",
-      "        [-0.8433, -0.7426]])\n",
-      "tensor([-0.5894,  0.5894])\n"
+      "tensor([[-0.0316, -0.0044],\n",
+      "        [ 0.1022,  0.0141]])\n",
+      "tensor([ 0.0271, -0.0878])\n",
+      "tensor([[-0.0842, -0.0102],\n",
+      "        [ 0.0842,  0.0102]])\n",
+      "tensor([-0.2954,  0.2954])\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "fbc6b756",
    "metadata": {},
    "outputs": [
@@ -410,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n"
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "748e11fe",
    "metadata": {},
    "outputs": [
@@ -448,12 +448,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[-0.0389, -0.0142],\n",
-      "        [ 0.1260,  0.0459]])\n",
-      "tensor([ 0.0261, -0.0846])\n",
-      "tensor([[ 0.2811,  0.2475],\n",
-      "        [-0.2811, -0.2475]])\n",
-      "tensor([-0.1965,  0.1965])\n"
+      "tensor([[-0.0105, -0.0015],\n",
+      "        [ 0.0341,  0.0047]])\n",
+      "tensor([ 0.0090, -0.0293])\n",
+      "tensor([[-0.0281, -0.0034],\n",
+      "        [ 0.0281,  0.0034]])\n",
+      "tensor([-0.0985,  0.0985])\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "17e6215f",
    "metadata": {},
    "outputs": [
@@ -476,12 +476,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[2.9611, 2.9858],\n",
-      "        [3.1260, 3.0459]])\n",
-      "tensor([3.0261, 2.9154])\n",
-      "tensor([[3.2811, 3.2475],\n",
-      "        [2.7189, 2.7525]])\n",
-      "tensor([2.8035, 3.1965])\n"
+      "tensor([[2.9895, 2.9985],\n",
+      "        [3.0341, 3.0047]])\n",
+      "tensor([3.0090, 2.9707])\n",
+      "tensor([[2.9719, 2.9966],\n",
+      "        [3.0281, 3.0034]])\n",
+      "tensor([2.9015, 3.0985])\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
