--- a/Test_jupyternotebook/Arbiter_norm_analysis.ipynb
+++ b/Test_jupyternotebook/Arbiter_norm_analysis.ipynb
@@ -206,7 +206,7 @@
     "# 그래프 그리기\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(columns_to_plot_label, grad_mean.values(), marker='o', color='skyblue', linestyle='-', linewidth=2, markersize=8)\n",
-    "plt.title('Gradient Mean')\n",
+    "plt.title('alpha')\n",
     "# plt.xlabel('Column')\n",
     "# plt.ylabel('mean')\n",
     "plt.xticks(rotation=0)\n",
