--- a/Test_jupyternotebook/Network_Structure.ipynb
+++ b/Test_jupyternotebook/Network_Structure.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "8c29a4e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,31 +22,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "7b28dfb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, sys\n",
     "\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "import easydict\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
     "\n",
-    "from meta_neural_network_architectures import VGGReLUNormNetwork, ResNet12, extract_top_level_dict, MetaBatchNormLayer, MetaLinearLayer\n",
-    "from inner_loop_optimizers import LSLRGradientDescentLearningRule"
+    "from meta_neural_network_architectures_selfDistill import VGGReLUNormNetwork, ResNet12\n",
+    "from utils.parser_utils import get_args\n",
+    "from data import MetaLearningSystemDataLoader\n",
+    "from experiment_builder import ExperimentBuilder\n",
+    "\n",
+    "from few_shot_learning_system import MAMLFewShotClassifier\n",
+    "from utils import loss_landscape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "79927d40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os.environ['DATASET_DIR'] ===  C:/Users/JM/PycharmProjects/MAML/datasets\n"
+     ]
+    }
+   ],
    "source": [
+    "os.environ['DATASET_DIR'] = 'C:/Users/JM/PycharmProjects/MAML/datasets'\n",
+    "print(\"os.environ['DATASET_DIR'] === \", os.environ['DATASET_DIR'])\n",
+    "\n",
     "args = easydict.EasyDict(\n",
     "{\n",
     "  \"batch_size\":2,\n",
@@ -50,7 +72,7 @@
     "  \"dataset_name\":\"mini_imagenet_full_size\",\n",
     "  \"dataset_path\":\"mini_imagenet_full_size\",\n",
     "  \"reset_stored_paths\":False,\n",
-    "  \"experiment_name\":\"alfa+maml\",\n",
+    "  \"experiment_name\":\"../MAML_JM\",\n",
     "  \"train_seed\": 0, \"val_seed\": 0,\n",
     "  \"indexes_of_folders_indicating_class\": [-3, -2],\n",
     "  \"sets_are_pre_split\": True,\n",
@@ -91,30 +113,34 @@
     "  \"num_classes_per_set\":5,\n",
     "  \"num_samples_per_class\":5,\n",
     "  \"num_target_samples\": 15,\n",
+    "  \"samples_per_iter\" : 1,\n",
     "\n",
     "  \"second_order\": True,\n",
     "  \"use_multi_step_loss_optimization\":False,\n",
-    "  \"attenuate\": False,\n",
-    "  \"alfa\": True,\n",
-    "  \"random_init\": False,\n",
-    "  \"backbone\": \"4-CONV\"\n",
+    "  \"backbone\": \"4-CONV\",\n",
+    "  \"arbiter\": True,\n",
+    "  \"use_bias\": True,\n",
+    "  \"smoothing\": False,\n",
+    "  \"knowledge_distillation\": False\n",
     "}\n",
     ")\n",
     "\n",
     "device = torch.cuda.current_device()\n",
-    "im_shape = (2, 3, args.image_height, args.image_width)\n",
+    "args.im_shape = (2, 3, args.image_height, args.image_width)\n",
     "\n",
     "args.use_cuda = torch.cuda.is_available()\n",
     "args.seed = 104\n",
     "args.reverse_channels=False\n",
     "args.labels_as_int=False\n",
     "args.reset_stored_filepaths=False\n",
-    "args.num_of_gpus=1"
+    "args.num_of_gpus=1\n",
+    "\n",
+    "# args.continue_from_epoch='latest'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "c5efae59",
    "metadata": {},
    "outputs": [
@@ -135,32 +161,6 @@
       "No inner loop params\n",
       "torch.Size([2, 48, 10, 10])\n",
       "No inner loop params\n",
-      "VGGNetwork self.layer_dict ===  ModuleDict(\n",
-      "  (conv0): MetaConvNormLayerReLU(\n",
-      "    (layer_dict): ModuleDict()\n",
-      "    (conv): MetaConv2dLayer()\n",
-      "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  )\n",
-      "  (conv1): MetaConvNormLayerReLU(\n",
-      "    (layer_dict): ModuleDict()\n",
-      "    (conv): MetaConv2dLayer()\n",
-      "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  )\n",
-      "  (conv2): MetaConvNormLayerReLU(\n",
-      "    (layer_dict): ModuleDict()\n",
-      "    (conv): MetaConv2dLayer()\n",
-      "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  )\n",
-      "  (conv3): MetaConvNormLayerReLU(\n",
-      "    (layer_dict): ModuleDict()\n",
-      "    (conv): MetaConv2dLayer()\n",
-      "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  )\n",
-      "  (linear): MetaLinearLayer()\n",
-      ")\n",
-      "VGGNetwork build out.shape ===  torch.Size([2, 5])\n",
-      "VGGNetwork build out ===  tensor([[0., 0., 0., 0., 0.],\n",
-      "        [0., 0., 0., 0., 0.]], grad_fn=<AddmmBackward0>)\n",
       "(VGGReLUNormNetwork) meta network params\n",
       "layer_dict.conv0.conv.weight torch.Size([48, 3, 3, 3])\n",
       "layer_dict.conv0.conv.bias torch.Size([48])\n",
@@ -187,87 +187,66 @@
       "layer_dict.conv3.norm_layer.bias torch.Size([48])\n",
       "layer_dict.conv3.norm_layer.weight torch.Size([48])\n",
       "layer_dict.linear.weights torch.Size([5, 1200])\n",
-      "layer_dict.linear.bias torch.Size([5])\n"
+      "layer_dict.linear.bias torch.Size([5])\n",
+      "Inner Loop parameters\n",
+      "Outer Loop parameters\n",
+      "classifier.layer_dict.conv0.conv.weight torch.Size([48, 3, 3, 3]) cuda:0 True\n",
+      "classifier.layer_dict.conv0.conv.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv0.norm_layer.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv0.norm_layer.weight torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv1.conv.weight torch.Size([48, 48, 3, 3]) cuda:0 True\n",
+      "classifier.layer_dict.conv1.conv.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv1.norm_layer.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv1.norm_layer.weight torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv2.conv.weight torch.Size([48, 48, 3, 3]) cuda:0 True\n",
+      "classifier.layer_dict.conv2.conv.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv2.norm_layer.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv2.norm_layer.weight torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv3.conv.weight torch.Size([48, 48, 3, 3]) cuda:0 True\n",
+      "classifier.layer_dict.conv3.conv.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv3.norm_layer.bias torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.conv3.norm_layer.weight torch.Size([48]) cuda:0 True\n",
+      "classifier.layer_dict.linear.weights torch.Size([5, 1200]) cuda:0 True\n",
+      "classifier.layer_dict.linear.bias torch.Size([5]) cuda:0 True\n",
+      "arbiter.0.weight torch.Size([20, 20]) cuda:0 True\n",
+      "arbiter.0.bias torch.Size([20]) cuda:0 True\n",
+      "arbiter.2.weight torch.Size([10, 20]) cuda:0 True\n",
+      "arbiter.2.bias torch.Size([10]) cuda:0 True\n",
+      "log_dir ===  C:\\Users\\JM\\PycharmProjects\\MAML\\MAML_JM\n",
+      "dataset_splits ==  dict_keys(['test', 'train', 'val'])\n",
+      "data {'test': 12000, 'train': 38400, 'val': 9600}\n",
+      "train_seed 985773, val_seed: 985773, at start time\n",
+      "0 50000\n"
      ]
     }
    ],
    "source": [
-    "device = torch.cuda.current_device()\n",
-    "im_shape=(2, 3, 84, 84)\n",
+    "# 모델을 구성한다\n",
+    "model = MAMLFewShotClassifier(args=args, device=device,\n",
+    "                              im_shape=(2, 3,\n",
+    "                                        args.image_height, args.image_width))\n",
     "\n",
-    "classifier = VGGReLUNormNetwork(im_shape=im_shape, \n",
-    "                      num_output_classes=args.\n",
-    "                      num_classes_per_set,\n",
-    "                      args=args, \n",
-    "                      device=device, \n",
-    "                      meta_classifier=True).to(device=device)\n",
+    "data = MetaLearningSystemDataLoader\n",
     "\n",
-    "# (layer_dict): ModuleDict()\n",
-    "# 코드가 동작하는데 전혀 필요없는 부분으로 보여짐. 이것 때문에 헷갈려하지말자"
+    "maml_system = ExperimentBuilder(model=model, data=data, args=args, device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c017bc6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ModuleDict(\n",
-       "  (conv0): MetaConvNormLayerReLU(\n",
-       "    (layer_dict): ModuleDict()\n",
-       "    (conv): MetaConv2dLayer()\n",
-       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  )\n",
-       "  (conv1): MetaConvNormLayerReLU(\n",
-       "    (layer_dict): ModuleDict()\n",
-       "    (conv): MetaConv2dLayer()\n",
-       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  )\n",
-       "  (conv2): MetaConvNormLayerReLU(\n",
-       "    (layer_dict): ModuleDict()\n",
-       "    (conv): MetaConv2dLayer()\n",
-       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  )\n",
-       "  (conv3): MetaConvNormLayerReLU(\n",
-       "    (layer_dict): ModuleDict()\n",
-       "    (conv): MetaConv2dLayer()\n",
-       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  )\n",
-       "  (linear): MetaLinearLayer()\n",
-       ")"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier.layer_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b04c4062",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "연산 전 torch.Size([10, 1, 20, 20])\n",
-      "conv1 연산 후 torch.Size([10, 3, 16, 16])\n",
-      "conv2 연산 후 torch.Size([10, 10, 12, 12])\n",
-      "차원 감소 후 torch.Size([10, 1440])\n",
-      "fc1 연산 후 torch.Size([10, 50])\n",
-      "fc2 연산 후 torch.Size([10, 10])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
     "  def __init__(self):\n",
