--- a/Test_jupyternotebook/MAML_by_step_norm_analysis.ipynb
+++ b/Test_jupyternotebook/MAML_by_step_norm_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "5519a5e0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "8dbec5f2",
    "metadata": {},
    "outputs": [
@@ -27,12 +27,12 @@
     }
    ],
    "source": [
-    "norm_info = pd.read_csv('../experiment_result/MAML_JM/MAML_JM.csv')"
+    "norm_info = pd.read_csv('../MAML_JM/MAML_JM.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "b07e01d2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "fefe3a5e",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "1e0ea0e9",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "Name: layer_dict.linear.weights_grad_L2norm, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,61 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fc3bd844",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "num_step\n",
-       "0    2.110491\n",
-       "1    1.124088\n",
-       "2    1.043178\n",
-       "3    0.512092\n",
-       "4    0.228309\n",
-       "Name: layer_dict.conv3.conv.weight_grad_L2norm, dtype: float64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "per_inner_loop_step['layer_dict.conv3.conv.weight_grad_L2norm']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "797df4d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "num_step\n",
-       "0    21.029750\n",
-       "1    21.029754\n",
-       "2    21.029758\n",
-       "3    21.029759\n",
-       "4    21.029759\n",
-       "Name: layer_dict.conv3.conv.weight_weight_L2norm, dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "per_inner_loop_step['layer_dict.conv3.conv.weight_weight_L2norm']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "2ed96242",
    "metadata": {},
    "outputs": [
@@ -515,7 +461,7 @@
        "Name: layer_dict.linear.weights_weight_L2norm, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +472,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "id": "fc3bd844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num_step\n",
+       "0    2.110491\n",
+       "1    1.124088\n",
+       "2    1.043178\n",
+       "3    0.512092\n",
+       "4    0.228309\n",
+       "Name: layer_dict.conv3.conv.weight_grad_L2norm, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_inner_loop_step['layer_dict.conv3.conv.weight_grad_L2norm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "797df4d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num_step\n",
+       "0    21.029750\n",
+       "1    21.029754\n",
+       "2    21.029758\n",
+       "3    21.029759\n",
+       "4    21.029759\n",
+       "Name: layer_dict.conv3.conv.weight_weight_L2norm, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_inner_loop_step['layer_dict.conv3.conv.weight_weight_L2norm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "cff1b6ee",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
        "[100000 rows x 63 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "9f0072a7",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "5b238380",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "84a2dc65",
    "metadata": {},
    "outputs": [
