--- a/Test_jupyternotebook/loss_landscape_arbiter.ipynb
+++ b/Test_jupyternotebook/loss_landscape_arbiter.ipynb
@@ -166,7 +166,9 @@
     "  \"use_multi_step_loss_optimization\":False,\n",
     "  \"backbone\": \"4-CONV\",\n",
     "  \"arbiter\": True,\n",
-    "  \"SWA\": False\n",
+    "  \"use_bias\": True,\n",
+    "  \"smoothing\": False,\n",
+    "  \"knowledge_distillation\": False\n",
     "}\n",
     ")\n",
     "\n",
@@ -6336,13 +6338,16 @@
     "        # Inner-loop (Adaptation 과정을 수행한 후, loss function을 구해야하나?)\n",
     "        num_steps=5\n",
     "        for num_step in range(num_steps):            \n",
-    "            support_loss, support_preds, out_feature_dict = maml_system.model.net_forward(\n",
+    "            support_loss, support_preds = maml_system.model.net_forward(\n",
     "                    x=x_support_set_task,\n",
     "                    y=y_support_set_task,\n",
     "                    weights=names_weights_copy,\n",
     "                    backup_running_statistics=num_step == 0,\n",
     "                    training=True,\n",
     "                    num_step=num_step,\n",
+    "                    training_phase='test',\n",
+    "                    epoch=0,\n",
+    "                    soft_target=None\n",
     "                )\n",
     "        \n",
     "            generated_alpha_params = {}\n",
@@ -6412,7 +6417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
